html skeleton, flex styling started

--- a/index.html
+++ b/index.html
@@ -5,11 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors </title>
 
+    <link rel="stylesheet" href="styles.css"></style>
+
     <script src="logic.js">
     </script>
 
 </head>
 <body>
+
+    <div class="title">
+        <h1> Rock, Paper, Scissors! </h1>
+    </div>
+
+    <div class="main-screen">
+        <div class="score">
+            <div class="human-score">
+                <h3> 0 </h3>
+            </div>
+            <div class="ai-score">
+                <h3> 0 </h3>
+            </div>
+        </div>
+        <div class="ai-choice">
+            <div class="ai-text">
+                <h5> COMPUTER CHOICE </h5>
+            </div>
+            <div class="ai-img">
+                <h1> IMG GOES HERE</h1>
+            </div>
+        </div>
+    </div>
+
+    <div class="user-choice">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+
     
 </body>
 </html>
