--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="styles.css"></style>
 
-    <script src="logic.js">
+    <script src="logic.js" defer>
     </script>
 
 </head>
@@ -19,11 +19,11 @@
 
     <div class="main-screen">
         <div class="score">
-            <div class="human-score">
-                <h3> 0 </h3>
+            <div>
+                <h3 class="human-score"> 0 </h3>
             </div>
-            <div class="ai-score">
-                <h3> 0 </h3>
+            <div>
+                <h3 class="ai-score"> 0 </h3>
             </div>
         </div>
         <div class="ai-choice">
@@ -37,11 +37,14 @@
     </div>
 
     <div class="user-choice">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock" name="ROCK">Rock</button>
+        <button id="paper" name="PAPER">Paper</button>
+        <button id="scissors" name="SCISSORS">Scissors</button>
     </div>
 
+    <div class="tempname">
+        
+    </div>
     
 </body>
 </html>
